Fix gap between header and top of screen

--- a/src/components/navbar/styles.scss
+++ b/src/components/navbar/styles.scss
@@ -6,8 +6,9 @@
   z-index: 100;
 
   position: fixed;
-  top: 5px;
+  top: 0px;
   left: 0;
+  padding: 10px;
   width: 100vw;
 
   display: grid;
